--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 MNEMONIC=
+PRIVATE_KEY=
+
 POLYGON_RPC_URL=
 MUMBAI_RPC_URL=
 KOVAN_RPC_URL=
@@ -9,3 +11,5 @@ TENDERLY_PROJECT=
 TENDERLY_USERNAME=
 TENDERLY_FORK_ID=
 TENDERLY_HEAD_ID=
+FORK=true
+TRACK_GAS=false
