add pgadmin in docker-compose

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -55,3 +55,16 @@ services:
       PGDATA: /var/lib/postgresql/data
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    depends_on:
+      - postgres
+    ports:
+      - "5555:80"   
+    environment:
+      PGADMIN_DEFAULT_EMAIL: pgadmin4@pgadmin.org
+      PGADMIN_DEFAULT_PASSWORD: admin
+    volumes:
+      - ./data/pgadmin-data:/var/lib/pgadmin
+    restart: unless-stopped  
