--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -87,6 +87,7 @@ dataSources:
         - PublishPrepared
         - PublishUpdated
         - PublishCreated
+        - PublishMinted
         - DerivativeNFTDeployed
         - DerivativeNFTCollected
         - DerivativeNFTAirdroped
@@ -115,9 +116,11 @@ dataSources:
           handler: handlePublishPrepared
         - event: PublishUpdated(uint256,uint256,uint256,uint256,uint256,uint256,uint256,string,string,string[],uint256[],uint256,uint256)
           handler: handlePublishUpdated
-        - event: PublishCreated(indexed uint256,indexed uint256,uint256,uint256,indexed
-            uint256,uint256,bytes,uint256)
+        - event: PublishCreated(indexed uint256,indexed
+            uint256,uint256,uint256,uint256,bytes)
           handler: handlePublishCreated
+        - event: PublishMinted(indexed uint256,indexed uint256)
+          handler: handlePublishMinted
         - event: DerivativeNFTDeployed(address,indexed uint256,indexed uint256,indexed
             uint256,address,uint256)
           handler: handleDerivativeNFTDeployed
