--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -155,13 +155,13 @@ dataSources:
         - SBTValueReceived
         - Deposit
         - BuySBTByEth
-        - ExchangeEthBySBT
+        - BuySBTByERC20
         - SubmitTransaction
         - ConfirmTransaction
         - ExecuteTransaction
         - ExecuteTransactionERC3525
         - RevokeConfirmation
-        - ExchangeVoucher
+        - VoucherDeposited
         - BalanceLocked
         - BalanceUnlocked
         - OfferTransfered
@@ -184,11 +184,12 @@ dataSources:
           handler: handleSBTValueReceived
         - event: Deposit(indexed address,indexed uint256,indexed address,uint256)
           handler: handleDeposit
-        - event: BuySBTByEth(indexed uint256,indexed address,indexed uint256,uint256)
-          handler: handleBuySBTByEth
-        - event: ExchangeEthBySBT(indexed uint256,indexed address,indexed
+        - event: BuySBTByEth(indexed uint256,indexed address,indexed
             uint256,uint256,uint256,uint256)
-          handler: handleExchangeEthBySBT
+          handler: handleBuySBTByEth
+        - event: BuySBTByERC20(indexed uint256,indexed address,indexed
+            address,uint256,uint256,uint256)
+          handler: handleBuySBTByERC20
         - event: SubmitTransaction(indexed address,indexed uint256,indexed
             address,address,uint256,bytes)
           handler: handleSubmitTransaction
@@ -202,9 +203,9 @@ dataSources:
           handler: handleExecuteTransactionERC3525
         - event: RevokeConfirmation(indexed address,indexed uint256)
           handler: handleRevokeConfirmation
-        - event: ExchangeVoucher(indexed uint256,indexed address,indexed
+        - event: VoucherDeposited(indexed uint256,indexed address,indexed
             uint256,uint256,uint256)
-          handler: handleExchangeVoucher
+          handler: handleVoucherDeposited
         - event: BalanceLocked(indexed address,indexed uint256,indexed
             uint256,address,uint256)
           handler: handleBalanceLocked
