--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -9,7 +9,7 @@ dataSources:
     network: mainnet
     source:
       abi: SBT
-      address: "0x0DCd1Bf9A1b36cE34237eEaFef220932846BCD82"
+      address: "0x610178dA211FEF7D417bC0e6FeD39F05609AD788"
       startBlock: 1
     mapping:
       kind: ethereum/events
@@ -18,7 +18,6 @@ dataSources:
       entities:
         - ProfileCreated
         - ProfileUpdated
-        - BurnSBT
         - Approval
         - ApprovalForAll
         - ApprovalValue
@@ -34,8 +33,6 @@ dataSources:
           handler: handleProfileCreated
         - event: ProfileUpdated(indexed uint256,string,string)
           handler: handleProfileUpdated
-        - event: BurnSBT(indexed address,indexed uint256,indexed uint256,uint256)
-          handler: handleBurnSBT
         - event: Approval(indexed address,indexed address,indexed uint256)
           handler: handleApproval
         - event: ApprovalForAll(indexed address,indexed address,bool)
@@ -124,7 +121,7 @@ dataSources:
     network: mainnet
     source:
       abi: Events
-      address: "0x9A9f2CCfdE556A7E9Ff0848998Aa4a0CFD8863AE"
+      address: "0x959922bE3CAee4b8Cd9a407cc3ac1C251C2007B1"
       startBlock: 1
     mapping:
       kind: ethereum/events
@@ -184,8 +181,7 @@ dataSources:
           handler: handleExecuteTransactionERC3525
         - event: RevokeConfirmation(indexed address,indexed uint256)
           handler: handleRevokeConfirmation
-        - event: VoucherDeposited(indexed uint256,indexed address,indexed
-            uint256,uint256)
+        - event: VoucherDeposited(indexed uint256,indexed address,indexed uint256,uint256)
           handler: handleVoucherDeposited
         - event: BalanceLocked(indexed address,indexed uint256,indexed
             uint256,address,uint256)
@@ -207,7 +203,7 @@ dataSources:
     network: mainnet
     source:
       abi: Voucher
-      address: "0x8A791620dd6260079BF849Dc5567aDC3F2FdC318"
+      address: "0xA51c1fc2f0D1a1b8494Ed1FE312d7C3a78Ed91C0"
       startBlock: 1
     mapping:
       kind: ethereum/events
@@ -239,7 +235,7 @@ dataSources:
     network: mainnet
     source:
       abi: Events
-      address: "0x59b670e9fA9D0A427751Af201D676719a970857b"
+      address: "0xc6e7DF5E7b4f2A278906862b61205850344D4e7d"
       startBlock: 1
     mapping:
       kind: ethereum/events
@@ -319,7 +315,7 @@ dataSources:
     network: mainnet
     source:
       abi: Events
-      address: "0xc6e7DF5E7b4f2A278906862b61205850344D4e7d"
+      address: "0x3Aa5ebB10DC797CAC828524e59A333d0A371443c"
       startBlock: 1
     mapping:
       kind: ethereum/events
