dNFT royalty seting

--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -417,6 +417,8 @@ dataSources:
       abis:
         - name: DerivativeNFT
           file: ../artifacts/contracts/DerivativeNFT.sol/DerivativeNFT.json
+        - name: ModuleGlobals
+          file: ../artifacts/contracts/modules/ModuleGlobals.sol/ModuleGlobals.json
       eventHandlers:
         - event: Approval(indexed address,indexed address,indexed uint256)
           handler: handleDNFTApproval
@@ -461,6 +463,8 @@ dataSources:
       abis:
         - name: DerivativeNFT
           file: ../artifacts/contracts/DerivativeNFT.sol/DerivativeNFT.json
+        - name: ModuleGlobals
+          file: ../artifacts/contracts/modules/ModuleGlobals.sol/ModuleGlobals.json
       eventHandlers:
         - event: Approval(indexed address,indexed address,indexed uint256)
           handler: handleDNFTApproval
