--- a/package.json
+++ b/package.json
@@ -48,12 +48,15 @@
     "@graphprotocol/graph-ts": "^0.29.1",
     "@graphprotocol/hardhat-graph": "https://github.com/graphprotocol/hardhat-graph",
     "@manifoldxyz/royalty-registry-solidity": "^2.0.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.4",
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "@nomiclabs/hardhat-ethers": "^2.2.1",
     "@nomiclabs/hardhat-etherscan": "^3.1.3",
     "@nomiclabs/hardhat-truffle5": "^2.0.7",
+    "@nomiclabs/hardhat-waffle": "^2.0.5",
     "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@openzeppelin/hardhat-upgrades": "^1.22.1",
     "@openzeppelin/test-helpers": "^0.5.16",
     "@solvprotocol/erc-3525": "git+https://github.com/solv-finance/erc-3525.git",
     "@typechain/ethers-v5": "^10.2.0",
